# sfex-lang

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README-en.md  README.md  SECURITY.md  THIRD_PARTY_LICENSES.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: rust.yml
book-src/: book.toml
book-src/book/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-fad7d02a.js
book-src/src/: SUMMARY.md  introduction.md
docs/: 404.html  index.html  print.html  searcher-c2a407aa.js  searchindex-5a0bae54.js  toc-1c381763.js  toc.html
docs/advanced/: debugging.html  memory.html  performance.html  project-structure.html  testing.html
docs/appendix/: changelog.html  comparison.html  faq.html  glossary.html  migration.html
docs/concurrency/: background.html  channels.html  tasks.html  thread-safety.html
docs/contributing/: architecture.html  code-of-conduct.html  dev-setup.html  guide.html  security.html
docs/control-flow/: break-continue.html  for-each.html  if-else.html  repeat-times.html  repeat-while.html  return.html  when-otherwise.html
docs/cop/: adjustments.html  proceed.html  situations.html  switch.html  use-cases.html
docs/core/: grapheme-clustering.html  mathematical-honesty.html  no-null.html  one-based-indexing.html  why-sfx.html
docs/error-handling/: best-practices.html  errors.html  try-catch.html
docs/examples/: concurrency.html  cop.html  file-io.html  hello-world.html  http.html  lists.html  math.html  oop.html  physics.html  reactive.html
docs/getting-started/: first-program.html  installation.html  quick-start.html
docs/jit/: benchmarks.html  features.html  how-it-works.html  limitations.html  overview.html  profiling.html  tiers.html
docs/oop/: concepts.html  fields.html  instances.html  methods.html  parameters.html  set.html  this.html
docs/reactive/: cascading.html  recursion.html  self-healing.html  use-cases.html  when-observers.html
docs/reference/: cli.html  errors.html  keywords.html  precedence.html  stdlib-api.html
docs/stdlib/: csv.html  data.html  env.html  file.html  html.html  http.html  json.html  llm.html  math.html  networking.html  overview.html  system.html  tcp.html  time.html  toml.html  udp.html  websocket.html  xml.html
docs/syntax/: basics.html  comma-separated.html  comments.html  data-types.html  operators.html  variables.html
src/: lib.rs  lsp.rs  main.rs  project.rs
src/compiler/: ast.rs  lexer.rs  parser.rs  token.rs
src/jit/: compiler.rs  mod.rs  profiler.rs
src/runtime/: interpreter.rs  value.rs
src/stdlib/: channel.rs  csv.rs  data.rs  env.rs  error.rs  file.rs  html.rs  http_net.rs  json.rs  llm.rs  math.rs  mod.rs  stream.rs  system.rs  task.rs  tcp.rs  time.rs  toml.rs  udp.rs  web.rs  websocket.rs  xml.rs
tests/: showcase_all_features.sfex  simple_context.sfex  test_create_with_fields.sfex  test_create_with_method.sfex  test_simple_create.sfex  todo.sfex  verify_create_fields.sfex
tests/assets/: books.xml  config.toml  dummy_long.json  products.json  test.env  users.csv
tests/benchmarks/: bench_interpreter_vs_jit.sfex  bench_jit_compare.sfex  bench_jit_ffi_overhead.sfex  bench_jit_loops.sfex  bench_jit_million.sfex  bench_jit_pure.sfex  bench_jit_real.sfex  bench_jit_simple.sfex  bench_jit_speedup.sfex  bench_matrix.sfex  bench_physics.sfex  bench_python.py  bench_trace.sfex  bench_trace_deep.sfex  bench_trace_simple.sfex  bench_vs_python.sfex  benchmark.sfex  test_jit.sfex  test_jit_comparisons.sfex  test_jit_control_flow.sfex  test_jit_count.sfex  test_jit_final_demo.sfex  test_jit_if_benchmark.sfex  test_jit_if_simple.sfex  (+12 more)
(+278 files in other folders)
