[package]
name = "sfex-lang"
version = "0.3.3"
edition = "2024"
authors = ["Temuujin <roriau@gmail.com>"]
description = "SFX (Situation Framework eXchange) - Programming the way humans think"
license = "Apache-2.0"

[[bin]]
name = "sfex"
path = "src/main.rs"

[dependencies]
# Phase 1: Core CVM dependencies
pest = "2.8.4"
pest_derive = "2.8.4"
bigdecimal = "0.4.9"
num-traits = "0.2"
rand = "0.9.2"
chrono = "0.4.42"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
clap = { version = "4.5.53", features = ["derive"] }
unicode-segmentation = "1.12.0"

# Phase 2: Data & Networking
# JSON (Already present)
serde_json = { version = "1.0.145", features = ["preserve_order"] }

# TOML
toml = "0.9.8"

# HTML (DOM Parsing & CSS Selectors)
scraper = "0.24.0"

# XML (DOM & XPath)
sxd-document = "0.3"
sxd-xpath = "0.4"

# CSV
csv = "1.3.0"

# Auto-detection (with reader features for better accuracy)
file-format = { version = "0.28.0", features = ["reader-txt", "reader-xml", "reader-zip", "reader-pdf"] }

# Phase 2: Networking (HTTP, WebSocket, TCP, UDP)
reqwest = { version = "0.12", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.28.0", features = ["native-tls"] }
futures-util = "0.3"

# Phase 4: JIT Compilation (Cranelift)
cranelift = "0.126.1"
cranelift-codegen = "0.126.1"
cranelift-frontend = "0.126.1"
cranelift-module = "0.126.1"
cranelift-jit = "0.126.1"
cranelift-native = "0.126.1"
target-lexicon = "0.13.3"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols